# traffic-data-analysis

./: .gitignore  README.md  pyproject.toml
scripts/: make_gif.py  make_pdf.py
src/devon_traffic/: __init__.py  app.py  charts.py  cli.py  data.py
tests/: test_playwright.py
